compiler-core/src/parse/snapshots/gleam_core__parse__tests__invalid_pattern_label_shorthand_4.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npub fn main() {\n  let Wibble(arg: arg:) = todo\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let Wibble(arg: arg:) = todo
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:22
  │
3 │   let Wibble(arg: arg:) = todo
  │                      ^ I was not expecting this

Found `:`, expected one of: 
- `)`
