compiler-core/src/parse/snapshots/gleam_core__parse__tests__missing_type_constructor_arguments_in_type_annotation_1.snap
---
source: compiler-core/src/parse/tests.rs
expression: "pub fn main() -> Int() {}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() -> Int() {}

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:21
  │
1 │ pub fn main() -> Int() {}
  │                     ^^ I was expecting arguments here

A type constructor must be passed arguments.
