compiler-core/src/parse/snapshots/gleam_core__parse__tests__missing_type_constructor_arguments_in_type_annotation_2.snap
---
source: compiler-core/src/parse/tests.rs
expression: "pub fn main() {\n  let a: Int() = todo\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  let a: Int() = todo
}

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:13
  │
2 │   let a: Int() = todo
  │             ^^ I was expecting arguments here

A type constructor must be passed arguments.
