compiler-core/src/parse/snapshots/gleam_core__parse__tests__multiple_deprecation_attribute_on_type_variant.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\ntype Wibble {\n    @deprecated(\"1\")\n    @deprecated(\"2\")\n    Wibble1\n    Wibble2\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type Wibble {
    @deprecated("1")
    @deprecated("2")
    Wibble1
    Wibble2
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:4:5
  │
4 │     @deprecated("2")
  │     ^^^^^^^^^^^ Duplicate attribute

This attribute has already been given.
